modifier methode add and update product